# automated-planning-a-star-pddl

./: .gitignore  .gitmodules  Domaine.pddl  Problème.pddl  README.md  pyproject.toml  requirements.txt
planification_automatique/: __main__.py  convert_problem_pddl.py  main.py  planificateur.py
planification_automatique/data/: results.json
planification_automatique/data/groupe1/: domain.pddl  problem0.pddl  problem3.pddl
planification_automatique/data/groupe2/: domain.pddl  problem2.pddl
planification_automatique/data/groupe3/: problem2.pddl  problem3.pddl  problem4.pddl
planification_automatique/heuristic/: __init__.py  custom_heuristic.py  heuristic.py  manhattan_distance.py  manhattan_distance_heuristic.py  one_heuristic.py  pattern_dbs_heuristic.py
planification_automatique/pddl/: domain.pddl  problem1.pddl  problem2.pddl
planification_automatique/pddl/groupe1/: problem1.pddl  problem2.pddl
planification_automatique/pddl_problem/: __init__.py  pddl_problem.py
planification_automatique/planificateur/: __init__.py  planificateur.py
planification_automatique/search_algorithm/: __init__.py  a_star.py  search_algorithm.py
planification_automatique/utils/: __init__.py  timeout.py  utils.py
