[tool.poetry]
name = "planification-automatique"
version = "0.1.0"
description = ""
authors = ["Flavien Deseure--Charron <flavien.deseure@gmail.com>"]
readme = "README.md"
packages = [{include = "planification_automatique"}]

[tool.poetry.dependencies]
python = "^3.9"
pddl = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "planification_automatique.__main__:main"
test_all = "planification_automatique.__main__:test_all_problems"